Fix the bug where NoteEditor and Header overlapped when scrolling

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,7 +2,7 @@
 
 .main {
   width: 70%;
-  margin: 5rem auto;
+  margin: 5rem auto 0 auto;
   padding: 2rem 1rem;
   display: flex;
   gap: 1rem;
