--- a/src/components/NoteEditor/NoteEditor.module.scss
+++ b/src/components/NoteEditor/NoteEditor.module.scss
@@ -5,7 +5,7 @@
   width: 0;
   height: fit-content;
   position: sticky;
-  top: 2rem;
+  top: 7rem;
   flex: 0 0 auto;
   padding: 1rem;
   border-radius: 1rem;
